# Multithread_Enabled_Black_Hole_Sim

./: .gitignore  CMakeLists.txt  README.md  bh_test  notes.txt
lib/: CMakeLists.txt
src/: bh.cpp  bh.hpp  config.h  globals.h  main.cpp  main.hpp  ray.cpp  ray.hpp  time_prop.cpp  time_prop.hpp
